--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
 <div class="m-3">
   <form [formGroup]="ssnSample" (ngSubmit)="onSubmit()">
-    <label for="exampleFormControlInput1" class="form-label">Social Security #</label>
-    <input 
-      type="text"
-      class="form-control"
-      placeholder="123-45-5678"
-      formControlName="ssn"
-      inputmode="numeric"
-      (input)="inputSSN()">
-      <!-- <div *ngIf="ssnSample.errors" class="invalid-feedback">
-        SSN has to be 12 digits.
-      </div> -->
+    <div class="col-md-6">
+      <label for="exampleFormControlInput1" class="form-label">Social Security #</label>
+      <input 
+        type="text"
+        class="form-control"
+        [ngClass]="(ssn.invalid) ? 'is-invalid' : ''"
+        placeholder="123-45-5678"
+        formControlName="ssn"
+        inputmode="numeric"
+        (input)="inputSSN()">
+        <div *ngIf="ssn.invalid" class="invalid-feedback">
+          SSN has to be 9 digits.
+        </div>
+    </div>
   </form> 
 </div>
