--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-  <form [formGroup]="ssnSample" (ngSubmit)="onSubmit()">
+  <form [formGroup]="ssnSample">
     <div class="col-md-6">
       <label for="exampleFormControlInput1" class="form-label">Social Security #</label>
       <input 
